[package]
name = "example"
description = "A new binary crate"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Nguyen Le Quang"]
repository = "https://github.com/Nguyen Le Quang/example"
homepage = "https://github.com/Nguyen Le Quang/example"

[dependencies]
anyhow = "1.0.75"
inquire = "0.6.2"
tracing = "0.1.40"
serde = "1.0.192"
serde_json = "1.0.108"
tracing-subscriber = "0.3.17"
clap = { version = "4.4.7", features = ["derive"] }
