[workspace]
members = ["bin/*"]
default-members = ["bin/raptor"]
resolver = "2"

[workspace.package]
description = "Trading at Raptor speed"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["quangkeu95"]
repository = "https://github.com/quangkeu95/raptor"
homepage = "https://github.com/quangkeu95/raptor"
exclude = ["**/target", "benches", "tests"]
include = ["bin/*", "crates/*", "etc"]

[workspace.dependencies]
anyhow = "1.0.75"
inquire = "0.6.2"
tracing = "0.1.40"
serde = "1.0.192"
serde_json = "1.0.108"
tracing-subscriber = "0.3.17"
clap = { version = "4.4.7", features = ["derive"] }
